# TigrisSystem

./: Cargo.toml  texts.json
.github/workflows/: deploy.yml
src/: lib.rs  utils.rs
src/commands/: admcontrol.rs  balance.rs  crime.rs  daily.rs  mod.rs  pay.rs  rob.rs  shop_ui.rs  slut.rs  subscribers.rs  work.rs
src/engine/: balance.rs  core.rs  items.rs  minigames.rs  mod.rs  repo.rs  types.rs
