[package]
name = "tigrus_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = [
  "builder",
  "cache",
  "chrono",
  "client",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "rustls_backend"
] }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
dotenvy = "0.15"
serde      = { version = "1.0", features = ["derive"] }
serde_json =  "1.0"       # wczytanie texts.json
lazy_static = "1.4"
anyhow = "1.0.99"
rand = { version = "0.9.2", features = ["std", "std_rng", "small_rng"] }
rand_core = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
num-format = "0.4.4"
dashmap = "6.1.0"
async-trait = "0.1.89"
commands = "0.0.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
moka = { version = "0.12.10", features = ["sync"] }

[[bin]]
name = "bot-dev"
path = "src/bin/bot_dev.rs"

[[bin]]
name = "bot-prod"
path = "src/bin/bot_prod.rs"

